--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,3 +8,6 @@ jobs:
         uses: actions/checkout@v2
       - name: docker build
         run: docker build -t romanus902/flask-app:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker push
+        run: docker push romanus902/flask-app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+
