--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -39,5 +39,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd flask_app_ci
-            echo ${{ secrets.PASSWORD }} | sudo -S docer-compose up -d
+            echo ${{ secrets.PASSWORD }} | sudo -S docker-compose up -d
 
